--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,11 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            form_login:
+                login_path: user_login
+                check_path: user_login
+            logout:
+                path: user_logout
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
