Lesson 11 - Events, Listeners: Added console Exception listener

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,3 +27,7 @@ services:
     App\EventListener\HttpExceptionListener:
         tags:
             - { name: kernel.event_listener, event: kernel.exception }
+
+    App\EventListener\ConsoleExceptionListener:
+        tags:
+            - { name: kernel.event_listener, event: console.error, method: onConsoleException}
