--- a/config/services.yaml
+++ b/config/services.yaml
@@ -36,3 +36,7 @@ services:
     App\EventListener\ControllerRequestListener:
         tags:
             - { name: kernel.event_listener, event: kernel.response, method: onControllerRequest }
+
+    App\EventListener\EditNoteActivityListener:
+        tags:
+            - { name: doctrine.orm.entity_listener, event: postUpdate, entity: App\Entity\Note, lazy: true }
