Lesson 15 - Forms: Added ownable listener. Ownable interface improve

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -40,3 +40,7 @@ services:
     App\EventListener\EditNoteActivityListener:
         tags:
             - { name: doctrine.orm.entity_listener, event: postUpdate, entity: App\Entity\Note, lazy: true }
+
+    App\EventListener\OwnableEntityListener:
+        tags:
+            - { name: doctrine.event_listener, event: prePersist, lazy: true }
