--- a/.env
+++ b/.env
@@ -30,3 +30,9 @@ APP_SECRET=70a52d5e6c716bb179ff7bd5d41676b9
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=7cfbc2209fd027af7873ca498235da89
+###< lexik/jwt-authentication-bundle ###
