--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,3 +4,8 @@
 
 api_login_check:
   path: /api/login_check
+
+api_doc:
+  path: /api/doc
+  methods: GET
+  defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
