Lesson 20 - API Implementation: Fix for routing configuration

--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,6 +1,13 @@
 controllers:
-    resource: ../../src/Controller/
+    resource: ../../src/Controller/**/*
     type: annotation
+    exclude: ../../src/Controller/Api
+
+api_controllers:
+    resource: ../../src/Controller/Api
+    type: annotation
+    prefix: api
+    name_prefix: api_
 
 kernel:
     resource: ../../src/Kernel.php
