--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -50,7 +50,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/api/login,                  roles: PUBLIC_ACCESS }
-        - { path: ^/api/doc,                    roles: PUBLIC_ACCESS }
-        - { path: ^/api/user/registration,      roles: PUBLIC_ACCESS }
-        - { path: ^/api,                        roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/login,  roles: PUBLIC_ACCESS }
+        - { path: ^/api/doc,    roles: PUBLIC_ACCESS }
+        - { path: ^/api/user,   roles: PUBLIC_ACCESS }
+        - { path: ^/api,        roles: IS_AUTHENTICATED_FULLY }
